# mbot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: mbot_bringup.launch  mbot_controller.launch  mbot_demo.launch  mbot_rosserial.launch
mbot/: CMakeLists.txt
mbot_bringup/: CMakeLists.txt  README.md  package.xml
mbot_bringup/cfg/: dynrec.cfg
mbot_bringup/launch/: mbot_battery.launch  mbot_bringup.launch  mbot_controller.launch  mbot_demo.launch  mbot_rosserial.launch
mbot_bringup/param/: demo_parameters.yaml  mbot_parameters.yaml
mbot_bringup/scripts/: emg_plotter.py
mbot_bringup/src/: mbot_bringup.cpp  mbot_controller.cpp  mbot_demo.cpp
mbot_msgs/: CMakeLists.txt  README.md  package.xml
mbot_msgs/msg/: EMG.msg  Motor.msg
param/: battery_parameters.yaml  demo_parameters.yaml  mbot_parameters.yaml
scripts/: mbot_battery.py
src/: main.cpp  mbot_bringup.cpp  mbot_controller.cpp
